--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!-- 設定網頁編碼為UTF-8 -->
+<!DOCTYPE html>
+<html>
+<title>Loging.........</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<style type="text/css">
+  body {
+    text-align: center;
+  }
+</style>
 <form name="form" method="post" action="check.php">
-帳號：<input type="text" name="id" /> <br>
-密碼：<input type="password" name="pw" /> <br>
-<input type="submit" name="button" value="登入" />
+<body>
+<h2> 
+<footer class="w3-container w3-teal">
+  <h1>Lon In</h1>
+  <h4><p>please input your id(s+學號) and password</p></h4>
+</footer>
+<p>
+帳號：<input type="text" name="id" /> <p>
+密碼：<input type="password" name="pw" /> <p>
+<input class="w3-btn w3-teal" type="submit" name="button" value="登入" />
+</h2>
+</body>
 </form>
